# QwenPaw

./: .gitignore  .pre-commit-config.yaml  README.md  README_ja.md  README_ru.md  README_vi.md  README_zh.md  install.bat  install.ps1  install.sh  pyproject.toml  search-index.json
.github/: actionlint.yaml
.github/actions/verify-legacy-macos/: action.yml
.github/actions/verify-tauri-macos/: action.yml
.github/workflows/: _e2e-job.yml  deploy-website.yml  desktop-release.yml  docker-release.yml  fork-verify-desktop.yml  fork-verify.yml  plugins-release.yml  pr-preview-tests.yml  publish-pypi.yml  real-behavior-proof.yml  release-duty.yml  release-verify.yml  tests.yml
assets/: _baseUniq-B-RxYOCr.js  _baseUniq-B0WE5r8a.js  _baseUniq-BBlANOuq.js  _baseUniq-BKT3Rr0K.js  _baseUniq-BffinTtQ.js  _baseUniq-C2D3btDz.js  _baseUniq-CFWveZkm.js  _baseUniq-CrDInARz.js  _baseUniq-CrkkeZXK.js  _baseUniq-DCZe1YN2.js  _baseUniq-DVwUUFp_.js  _baseUniq-DeBrmPdx.js  _baseUniq-Dfd4DTIN.js  _baseUniq-EcIQ4rZp.js  _baseUniq-FLpZzTaC.js  _baseUniq-JBtnEx3c.js  _baseUniq-R9__GVf_.js  _baseUniq-iwY5R8Ls.js  _baseUniq-zoZlN6gk.js  arc-5uUV9_7H.js  arc-6xd3ssDB.js  arc-BBesw53A.js  arc-BE6ckutI.js  arc-CAg4TlmN.js  arc-CV6K9fek.js  arc-CW21cIAx.js  arc-CfqXGD_p.js  arc-ChHGka6o.js  arc-CmkDcDaD.js  arc-CrmGwvmQ.js  arc-D0nbfqjF.js  arc-DSg0Qxt4.js  arc-DU1MgDuP.js  arc-DfCCj71D.js  arc-DuqAzV48.js  arc-Q5_8teLH.js  arc-UwQlgzAK.js  arc-XQIhJhJD.js  architectureDiagram-VXUJARFQ--6IKyyxa.js  architectureDiagram-VXUJARFQ-BFVUedn-.js  (+798 more)
console/: index.html  package-lock.json  package.json  tauri.html
console/docs/: chat-session-call-flows.md
console/src/: App.tsx  i18n.ts  main.tsx  vite-env.d.ts
console/src-tauri/: tauri.conf.json
console/src-tauri/src/: lib.rs  updates.rs
console/src/layouts/: Header.tsx  Sidebar.tsx  SidebarSessionItem.tsx  SidebarSessionList.tsx  SidebarSettingsPanel.tsx  constants.ts  index.module.less  sidebarSessionItem.module.less  sidebarSessionList.module.less  sidebarSettingsPanel.module.less
console/src/locales/: en.json  id.json  ja.json  pt-BR.json  ru.json  vi.json  zh.json
console/src/os/: AppStore.tsx  BootScreen.tsx  DesktopOS.tsx  Dock.tsx  Launcher.tsx  MenuBar.tsx  MissionControl.tsx  NotificationCenter.tsx  SettingsApp.tsx  SpacesPanel.tsx  WallpaperPicker.tsx  WindowFrame.tsx  WindowRouter.tsx  osApps.ts  osIconStore.test.ts  osIconStore.ts  osNotifyStore.ts  osPluginStore.ts  osRouteMap.ts  osRouteStore.ts  osWallpaperStore.ts  osWindowContainer.tsx  osWindowStore.ts  snap.test.ts  snap.ts  useEdgeReveal.test.ts  useEdgeReveal.ts  useOsNotifyPoller.ts  useOsStyles.ts  usePluginApps.ts  wallpapers.ts
console/src/plugins/: PluginContext.tsx  PluginLoader.ts  PluginSystem.ts  hostExternals.ts  types.ts
console/src/stores/: messageQueueStore.ts  sessionListStore.ts  sidebarModeStore.ts  uploadLimitStore.ts
console/src/styles/: layout.css
console/src/tauri/: BackendReadyGate.tsx  backendRuntime.ts
console/src/test/: icons-mock.ts
console/src/utils/: freeModelSwitchWarning.tsx  openExternalLink.ts  sessionRoute.ts
deploy/: Dockerfile
deploy/config/: supervisord.conf.template
docs/: channels.en.md  channels.zh.md  cli.en.md  cli.zh.md  commands.en.md  commands.zh.md  community.en.md  community.zh.md  compact.en.md  compact.zh.md  comparison.en.md  comparison.zh.md  config.en.md  config.zh.md  console.en.md  console.zh.md  context.en.md  context.zh.md  contributing.en.md  contributing.zh.md  desktop.en.md  desktop.zh.md  faq.en.md  faq.zh.md  index.html  intro.en.md  intro.zh.md  memory.en.md  memory.zh.md  models.en.md  models.zh.md  multi-agent.en.md  multi-agent.zh.md  quickstart.en.md  quickstart.zh.md  roadmap.en.md  roadmap.zh.md  security.en.md  security.zh.md  skills.en.md  (+1 more)
docs/cli/: index.html
docs/commands/: index.html
docs/compact/: index.html
docs/config/: index.html
docs/console/: index.html
docs/heartbeat/: index.html
docs/intro/: index.html
docs/memory/: index.html
docs/quickstart/: index.html
docs/search/: index.html
docs/skills/: index.html
docs/superpowers/plans/: 2026-06-02-a2ui-tool.md
docs/superpowers/specs/: 2026-06-02-a2ui-tool-design.md
e2e/: README.md  conftest.py  pytest.ini
e2e/config/: settings.py
e2e/pages/: chat_page.py  coding_page.py  inbox_page.py  memory_page.py  plan_page.py  plugin_page.py
e2e/scripts/: start_test_server.sh  stop_test_server.sh
e2e/tests/: conftest.py  test_coding.py  test_inbox.py  test_memory.py  test_plan.py  test_plugins.py  test_slash_commands.py
examples/plugins/token-usage-plugin/: manifest.json  package-lock.json  package.json  vite.config.ts
examples/plugins/view-image-plugin/: manifest.json  package-lock.json  package.json  (+2 more)
release-notes/: v0.0.4.md  v0.0.4.zh.md  v0.0.5-beta.1.md  v0.0.5-beta.1.zh.md  v0.0.5-beta.2.md  v0.0.5-beta.2.zh.md  v0.0.5-beta.3.md  v0.0.5-beta.3.zh.md  v0.0.5.md  v0.0.5.zh.md  v0.0.6.md  v0.0.6.zh.md  v0.0.7.md  v0.0.7.zh.md
scripts/: cleanup_windows_sandbox.py  install.bat  install.ps1  install.sh
scripts/pack/: build_win.ps1  generate_plugin_metadata.py  merge_plugin_index.py  patch_main_index.py
scripts/pack-tauri/: build_pyinstaller.ps1  build_pyinstaller.sh  build_win_pyinstaller.ps1  generate_update_manifest.py  stage_python_runtime.py  sync_tauri_version.mjs
scripts/verify/: desktop_verify.py  launch_tauri_macos.sh  launch_tauri_windows.ps1
src/copaw/: __version__.py
src/qwenpaw/: __version__.py  constant.py
tests/: conftest.py
tests/integration/: helpers.py  test_access_control.py  test_acp_runner.py  test_agent_app.py  test_auth_real.py  test_console_chat_task.py  test_cron_execution.py  test_cross_cutting_defense.py  test_driver_mcp_env_ref_flow.py  test_fork_and_coding_mode.py  test_local_models.py  test_memory_context.py  test_plugin_types.py  test_plugins.py  test_provider_switching.py  test_security_config.py  test_security_real.py  test_tool_calls_lifecycle.py  test_tool_config.py
website/: package.json  pnpm-lock.yaml
website/src/: index.css
website/supabase/: blog_stats.sql
(+651 files in other folders)
